--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
 <div class="container margin_top_shop">
+ <div class="d-flex justify-content-between mb-4">
   <h2 class="text-center">Dashboard</h2>
+  <button class="btn btn-danger" (click)="logout()">Logout</button>  
+ </div> 
   <table class="table">
     <thead>
       <tr>
