--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,10 +1,10 @@
-<div class="container margin_top_shop" *ngIf="product">
+<div class="container product-detail" *ngIf="product">
     <h4>{{ product.productName }}</h4>
-    <table class="table table-bordered mt-3">
+    <table class="table table-hover mt-3">
       <thead>
         <tr>
-          <th><h6>Mağaza</h6></th>
-          <th><h6>Qiymət</h6></th>
+          <th>Mağaza</th>
+          <th>Qiymət</th>
         </tr>
       </thead>
       <tbody>
