--- a/src/app/store-detail/store-detail.component.html
+++ b/src/app/store-detail/store-detail.component.html
@@ -6,9 +6,11 @@
         <button>Search</button>
       </div>
       <ul class="list-group">
-        <li class="list-group-item" *ngFor="let category of categories" (click)="filterByCategory(category)">
+        <li class="list-group-item" *ngFor="let category of categories" (click)="filterByCategory(category)"
+          [ngClass]="{'active': selectedCategory === category}">
           {{ category }}
         </li>
+
       </ul>
     </div>
 
