--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,33 +1,29 @@
-<div class="login-page">
-    <div class="container">
-        <div class="row justify-content-center margin_top_shop form-box">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h2 class="text-center">Login</h2>
-                    </div>
-                    <div class="card-body">
-                        <form (ngSubmit)="login()" #loginForm="ngForm">
-                            <div class="form-group">
-                                <label for="username">Username</label>
-                                <input type="text" id="username" name="username" class="form-control"
-                                    [(ngModel)]="username" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" id="password" name="password" class="form-control"
-                                    [(ngModel)]="password" required>
-                            </div>
-                            <div class="form-group mt-3">
-                                <button type="submit" class="btn btn-primary btn-block">Login</button>
-                            </div>
-                            <div *ngIf="error" class="alert alert-danger text-center">
-                                {{ error }}
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+<!-- login.component.html -->
+<div class="container login">
+    <div >
+      <h2>Login</h2>
+      <form (ngSubmit)="login()">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" class="form-control" [(ngModel)]="username" name="username" required>
         </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" class="form-control" [(ngModel)]="password" name="password" required>
+        </div>
+        <div>
+            <a href="/register">Qeydiyyatdan keç</a>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+        <div *ngIf="error" class="alert alert-danger mt-2">
+          {{ error }}
+        </div>
+      </form>
     </div>
-</div>
+  
+    <!-- <div *ngIf="isLoggedIn()">
+      <p>Welcome, {{ authService.getUsername() }}!</p>
+      <button (click)="logout()" class="btn btn-danger">Logout</button>
+    </div> -->
+  </div>
+  
