--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-<!-- navbar.component.html -->
 <nav class="navbar navbar-expand-lg">
     <div class="container navbar-xl">
         <a class="navbar-brand" href="#">Tapan.az</a>
@@ -14,7 +13,18 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/stores" routerLinkActive="active">Mağazalar</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/products" routerLinkActive="active">Məhsullar</a>
+                </li>
             </ul>
+        </div>
+
+        <div *ngIf="isLoggedIn()" class="d-flex align-items-center gap-2">
+            <p class="mb-0"> {{ authService.getUsername() }}!</p>
+            <button (click)="logout()" class="btn btn-danger">Logout</button>
+        </div>
+        <div *ngIf="!isLoggedIn()">
+            <button (click)="navigateToLogin()" class="btn btn-danger">Login</button>
         </div>
     </div>
 </nav>
