--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,7 @@
         <div *ngIf="isLoggedIn()" class="d-flex align-items-center gap-2">
             <p class="mb-0"> {{ authService.getUsername() }}!</p>
             <button (click)="logout()" class="btn btn-danger">Logout</button>
+            <a href="/cart">Cart</a>
         </div>
         <div *ngIf="!isLoggedIn()">
             <button (click)="navigateToLogin()" class="btn btn-danger">Login</button>
