--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -2,19 +2,15 @@
     <div class="row">
         <div class="col-lg-3">
             <ul class="list-group">
-                <li class="list-group-item"
-                    *ngFor="let store of stores"
-                    [ngClass]="{'active': store === selectedStore}"
+                <li class="list-group-item" *ngFor="let store of stores" [ngClass]="{'active': store === selectedStore}"
                     (click)="selectStore(store)">
                     {{ store.storeName }}
                 </li>
             </ul>
 
             <ul class="list-group mt-5">
-                <li class="list-group-item"
-                    *ngFor="let category of categories"
-                    [ngClass]="{'active': category === selectedCategory}"
-                    (click)="filterProductsByCategory(category)">
+                <li class="list-group-item" *ngFor="let category of categories"
+                    [ngClass]="{'active': category === selectedCategory}" (click)="filterProductsByCategory(category)">
                     {{ category }}
                 </li>
             </ul>
@@ -27,7 +23,9 @@
                             alt="{{ product.productName }}">
                         <div class="card-body">
                             <h6 class="card-title">{{ product.productName }}</h6>
-                            <p class="card-text">{{ product.price | currency }} ₼</p>
+                            <p class="card-text">{{ product.price}} ₼</p>
+                            <button class="btn btn-success" (click)="addToCart(product)">Add To Cart</button>
+
                         </div>
                     </div>
                 </div>
