--- a/src/app/store-detail/store-detail.component.html
+++ b/src/app/store-detail/store-detail.component.html
@@ -23,6 +23,7 @@
             <div class="card-body">
               <h6 class="card-title">{{ product.productName }}</h6>
               <p class="card-text">{{ product.price }} ₼</p>
+              <button class="btn btn-success" (click)="addToCart(product)">Add To Cart</button>
             </div>
           </div>
         </div>
