--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -24,7 +24,7 @@
                         <div class="card-body">
                             <h6 class="card-title">{{ product.productName }}</h6>
                             <p class="card-text">{{ product.price}} ₼</p>
-                            <button class="btn btn-success" (click)="addToCart(product)">Add To Cart</button>
+                            <button (click)="addToCart(product)">Add To Cart</button>
 
                         </div>
                     </div>
