--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,3 +1,56 @@
-.cart{
+.cart {
     margin-top: 200px;
+}
+
+.cart input {
+    outline: none;
+    padding: 3px 0 3px 5px;
+}
+
+.cart table tr th {
+    font-weight: 500;
+}
+
+.cart .btn-warning {
+    color: white;
+    padding: 5px 35px;
+}
+
+.cart tr {
+    background: rgb(219, 85, 24);
+    background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+    height: 50px;
+    color: white;
+    
+}
+
+.cart tr th{
+    padding-left: 10px;
+}
+
+.cart tr th:first-child{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.cart tr th:last-child{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.cart i{
+    color: #D8730C;
+}
+
+.cart i:hover{
+    cursor: pointer;
+}
+
+.cart .btn-counter{
+    background: rgb(219, 85, 24);
+    background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+    border: none;
+    color: white;
+    padding: 6px 12px;
+    border-radius: 6px;
 }
