--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,39 +1,45 @@
 <div class="container cart">
-    <h2>Shopping Cart</h2>
+    <h4 class="mb-5 text-center">Alış-veriş səbəti</h4>
     <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Image</th>
-                <th scope="col">Product Name</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Price</th>
-                <th scope="col">Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            <ng-container *ngIf="cartProducts.length > 0; else emptyCart">
-                <tr *ngFor="let product of cartProducts; let i = index">
-                    <th scope="row">{{ i + 1 }}</th>
-                    <td><img class="img-thumbnail" width="100" [src]="product.img" alt="{{ product.productName }}"
-                            height="100"></td>
-                    <td>{{ product.productName }}</td>
-                    <td>
-                        <div>
-                            <button class="btn btn-danger" (click)="changeQuantity(product, -1)">-</button>
-                            <span>{{ product.quantity || 1 }}</span>
-                            <button class="btn btn-danger" (click)="changeQuantity(product, 1)">+</button>
-                        </div>
-                    </td>
-                    <td>{{ (product.price * (product.quantity || 1)).toFixed(2) }} ₼</td>
-                    <td><button class="btn btn-warning" (click)="deleteProduct(product)">Delete</button></td>
-                </tr>
-            </ng-container>
-        </tbody>
+        <tr>
+          <th scope="col">Şəkil</th>
+          <th scope="col">Məhsulun adı</th>
+          <th scope="col">Miqdarı</th>
+          <th scope="col">Qiyməti</th>
+          <th scope="col"></th>
+        </tr>
+      <tbody>
+        <ng-container *ngIf="cartProducts.length > 0; else emptyCart">
+          <tr *ngFor="let product of cartProducts; let i = index">
+            <!-- <th scope="row">{{ i + 1 }}</th> -->
+            <td>
+              <img class="img-thumbnail" width="100" [src]="product.img" alt="{{ product.productName }}" height="100">
+            </td>
+            <td>{{ product.productName }}</td>
+            <td>
+              <div *ngIf="!product.kq; else kqInput" class="d-flex align-items-center gap-3">
+                <button class="btn-counter" (click)="changeQuantity(product, -1)">-</button>
+                <span>{{ product.quantity || 1 }}</span>
+                <button class="btn-counter" (click)="changeQuantity(product, 1)">+</button>
+              </div>
+              <ng-template #kqInput>
+                <input type="number" [(ngModel)]="product.quantity" (change)="updateQuantity(product)" min="1" step="0.1">
+                kg
+              </ng-template>
+            </td>
+            <td>{{ (product.price * (product.quantity || 1)).toFixed(2) }} ₼</td>
+            <td>
+              <!-- <button class="btn btn-warning" (click)="deleteProduct(product)">Sil</button> -->
+              <i  class="fas fa-trash" (click)="deleteProduct(product)"></i>
+            </td>
+          </tr>
+        </ng-container>
+      </tbody>
     </table>
     <ng-template #emptyCart>
-        <p>Cart is empty.</p>
+      <p>Səbət boşdur.</p>
     </ng-template>
-
-    <h5>Total Price: {{ totalPrice.toFixed(2) }} ₼</h5> <!-- Display total price -->
-</div>
+  
+    <h5 class="mt-5">Ümumi qiymət: {{ totalPrice.toFixed(2) }} ₼</h5> <!-- Display total price -->
+  </div>
+  
