--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,79 @@
-.margin_top_shop{
-    margin-top: 200px;
+.dashboard{
+    margin-top: 130px;
 }
+
+.dashboard .stores img{
+    height: 200px;
+    width: 100% !important;
+    object-fit: cover ;
+}
+
+.dashboard .stores .card a:hover{
+    cursor: pointer;
+}
+
+.dashboard table tr{
+    background: rgb(219, 85, 24);
+    background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+    height: 50px;
+    color: white;
+}
+
+.dashboard table tr th{
+    font-weight: 500;
+    padding-left: 10px;
+    
+}
+
+.dashboard table tr th:first-child{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.dashboard table tr th:last-child{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.dashboard table i{
+    color: #FB8E01;
+    font-size: 20px;
+}
+
+.dashboard table i:hover{
+    cursor: pointer;
+}
+
+.dashboard .btn-back{
+    background: rgb(219, 85, 24);
+    background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+    border: none;
+    color: white;
+    font-size: 14px;
+    padding: 6px 20px;
+    border-radius: 6px;
+}
+
+.dashboard .btn-add{
+    background: rgb(219, 85, 24);
+    background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+    border: none;
+    color: white;
+    font-size: 14px;
+    padding: 6px 20px;
+    border-radius: 6px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
