--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,7 +18,9 @@
 }
 
 .search_results{
-    background-color: #03034966;
+    /* background-color: #03034966; */
+    background: rgb(219,85,24);
+    background: linear-gradient(278deg, rgba(219,85,24,1) 0%, rgba(213,113,13,1) 35%, rgba(255,145,0,1) 100%);
     width: 490px;
     border-radius: 7px;
     margin-top: 10px;
@@ -34,7 +36,7 @@
 
 .search_results p a:hover{
     
-    background-color: rgb(59, 138, 207);
+    background-color: rgb(254, 106, 0);
     /* padding: 5px 3px; */
 }
 
@@ -62,7 +64,9 @@
     padding: 15px 25px;
     border: none;
     border-radius: 0px 5px 5px 0px;
-    background-color: rgb(3, 3, 73);
+    /* background-color: rgb(3, 3, 73); */
+    background: rgb(219,85,24);
+    background: linear-gradient(278deg, rgba(219,85,24,1) 0%, rgba(213,113,13,1) 35%, rgba(255,145,0,1) 100%);
     color: white;
 }
 
