--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,8 +1,52 @@
-.margin_top_shop{
-    margin-top: 200px;
-}
-
-
 .login{
+    display: flex;
+}
+
+.login .form-group label{
+    font-size: 15px;
+}
+
+.login .form-group input{
+    outline: none;
+}
+
+.login .form-group input:focus{
+    outline: none;
+    box-shadow: none;
+}
+
+.login .left{
+    background: rgb(219,85,24);
+    background: linear-gradient(278deg, rgba(219,85,24,1) 0%, rgba(213,113,13,1) 35%, rgba(255,145,0,1) 100%);
+    height: 100vh;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.login .left a{
+    border: 1px solid white;
+    color: white;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 14px;
+}
+
+.login .right{
+    width: 60%;
     margin-top: 200px;
 }
+
+.login .right button{
+    background: rgb(219,85,24);
+    background: linear-gradient(278deg, rgba(219,85,24,1) 0%, rgba(213,113,13,1) 35%, rgba(255,145,0,1) 100%);
+    border: none;
+}
+
+.login .right a{
+    color: #D86612;
+}
+
