--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,37 @@
-<!-- login.component.html -->
-<div class="container login">
-    <div >
-      <h2>Login</h2>
-      <form (ngSubmit)="login()">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" class="form-control" [(ngModel)]="username" name="username" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" class="form-control" [(ngModel)]="password" name="password" required>
-        </div>
+<div class=" login">
+  <div class="left">
+    <h3>İndi qeydiyyatdan keç!</h3>
+    <p>Hesabın yoxdur?</p>
+    <a href="/register">Qediyyatdan keç</a>
+
+  </div>
+  <div class="right">
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="col-lg-7">
         <div>
-            <a href="/register">Qeydiyyatdan keç</a>
+          <h2 class="text-center mb-5">Daxil ol</h2>
+          <form (ngSubmit)="login()">
+            <div class="form-group">
+              <label for="username">İstifadəçi adı</label>
+              <input type="text" id="username" class="form-control" [(ngModel)]="username" name="username" required>
+            </div>
+            <div class="form-group mt-3">
+              <label for="password">Şifrə</label>
+              <input type="password" id="password" class="form-control" [(ngModel)]="password" name="password" required>
+            </div>
+           
+            <button type="submit" class="btn btn-primary mt-3">Daxil ol</button>
+            <div *ngIf="error" class="alert alert-danger mt-2">
+              {{ error }}
+            </div>
+          </form>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-        <div *ngIf="error" class="alert alert-danger mt-2">
-          {{ error }}
-        </div>
-      </form>
+      </div>
     </div>
-  
-    <!-- <div *ngIf="isLoggedIn()">
+  </div>
+
+  <!-- <div *ngIf="isLoggedIn()">
       <p>Welcome, {{ authService.getUsername() }}!</p>
       <button (click)="logout()" class="btn btn-danger">Logout</button>
     </div> -->
-  </div>
-  
+</div>
