--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,33 +3,66 @@
   font-weight: bold;
 }
 
-.navbar-nav .nav-link{
+.navbar-nav .nav-link {
   color: rgb(0, 0, 0);
 }
 
-.navbar-brand{
+.navbar-brand {
   color: rgb(0, 0, 0);
   font-size: 17px;
 }
 
 .navbar {
-  width: 100% ;
+  width: 100%;
   z-index: 20;
   position: absolute;
   display: flex;
   align-items: center;
   top: 50px;
-  
+
 }
 
-.navbar .navbar-xl{
+.navbar .navbar-xl {
   background-color: #ffffff;
   padding: 15px;
-  color: rgb(0, 0, 0) ;
+  color: rgb(0, 0, 0);
   border-radius: 20px;
   padding: 15px;
   /* width: 60%; */
   /* border: 1px solid #030349; */
   /* background-color: #030349; */
   box-shadow: rgba(2, 8, 110, 0.2) 0px 2px 8px 0px;
+}
+
+.navbar i {
+  color: black;
+  font-size: 20px;
+}
+
+.navbar .login-btn {
+  background: rgb(219, 85, 24);
+  background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+.navbar .logout-btn {
+  background: rgb(219, 85, 24);
+  background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+.navbar i{
+  color: #DB5518;
+}
+
+.navbar .username{
+  font-size: 14px;
 }
