--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,31 +1,33 @@
-<nav class="navbar navbar-expand-lg">
+<nav *ngIf="showNavbar" class="navbar navbar-expand-lg">
     <div class="container navbar-xl">
-        <a class="navbar-brand" href="#">Tapan.az</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/home" routerLinkActive="active">Ana səhifə</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/stores" routerLinkActive="active">Mağazalar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/products" routerLinkActive="active">Məhsullar</a>
-                </li>
-            </ul>
-        </div>
-
-        <div *ngIf="isLoggedIn()" class="d-flex align-items-center gap-2">
-            <p class="mb-0"> {{ authService.getUsername() }}!</p>
-            <button (click)="logout()" class="btn btn-danger">Logout</button>
-            <a href="/cart">Cart</a>
-        </div>
-        <div *ngIf="!isLoggedIn()">
-            <button (click)="navigateToLogin()" class="btn btn-danger">Login</button>
-        </div>
+      <a class="navbar-brand" href="#">Tapan.az</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home" routerLinkActive="active">Ana səhifə</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/stores" routerLinkActive="active">Mağazalar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/products" routerLinkActive="active">Məhsullar</a>
+          </li>
+        </ul>
+      </div>
+  
+      <div *ngIf="isLoggedIn()" class="d-flex align-items-center gap-2">
+        <a href="/cart"><i class="fa-solid fa-basket-shopping"></i></a>
+        <button (click)="logout()" class="logout-btn">Logout</button>
+        <p class="mb-0 username"> {{ authService.getUsername() }}!</p>
+      </div>
+  
+      <div *ngIf="!isLoggedIn()">
+        <button (click)="navigateToLogin()" class="login-btn">Login</button>
+      </div>
     </div>
-</nav>
+  </nav>
+  
