--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,14 +1,11 @@
 <div class="container product-detail" *ngIf="product">
-  <h4>{{ product.productName }}</h4>
-  <table class="table table-hover mt-3">
-    <thead>
+  <table class="table mt-3">
       <tr>
         <th>Şəkil</th>
-        <th>Məhsul</th>
+        <th>Məhsulun adı</th>
         <th>Mağaza</th>
         <th>Qiymət</th>
       </tr>
-    </thead>
     <tbody>
       <tr *ngFor="let item of productPrices">
         <td>
