--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,34 +1,57 @@
-.products{
-    padding-top: 150px;
+.products {
+  padding-top: 150px;
 }
 
 
-.store-card, .product-card {
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    text-align: center;
-  }
-  
-  .store-card img, .product-card img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .product-card {
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  }
+.products button {
+  font-size: 14px;
+}
 
-  .products ul li:hover{
-    background-color: #F0F0F0;
-  }
+.store-card,
+.product-card {
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.store-card img,
+.product-card img {
+  width: 100%;
+  height: auto;
+}
+
+.product-card {
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.products ul li:hover {
+  background: rgb(219, 85, 24);
+  background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+  color: white;
+}
 
 
-  .active {
-    background-color: #F0F0F0;
-    color: black;
-    border-color: #F0F0F0;
-  }
-  
+.active {
+  background: rgb(219, 85, 24);
+  background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+  color: white;
+  border-color: #F58903;
+}
+
+.products .card-body button {
+  border: none;
+  background: rgb(219, 85, 24);
+  background: linear-gradient(278deg, rgba(219, 85, 24, 1) 0%, rgba(213, 113, 13, 1) 35%, rgba(255, 145, 0, 1) 100%);
+  color: white;
+  font-size: 14px;
+  padding: 10px 15px;
+  border-radius: 6px;
+}
+
+.products .card {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  border: none;
+}
